<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UTSAPPS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Data Register</string>
    
    <!-- Additional String Value -->
    <string name="txtTitle">Form Pendaftaran</string>
    <string name="txtSeminarTraining">Seminar Training</string>
    <string name="txtNamaLengkap">Nama Lengkap</string>
    
    <string-array name="jn_seminar">
        <item>Big Data and IoT</item>
        <item>Cyber Security</item>
    </string-array>
    
    <string-array name="jn_sex">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>
    
     <string-array name="jn_size">
        <item>Ukuran Kaos - S</item>
        <item>Ukuran Kaos - M</item>
        <item>Ukuran Kaos - L</item>
        <item>Ukuran Kaos - XL</item>
    </string-array>
    
    <string name="strNama">Nama :</string>
    <string name="strAlamat">Alamat :</string>
    <string name="strSex">Jenis Kelamin :</string>
    <string name="strDOB">Tanggal Lahir :</string>
    <string name="strTempatLahir">Tempat Lahir :</string>
    <string name="strKTP">No.ID KTP :</string>
    <string name="strEmail">Alamat Email :</string>
    <string name="strHP">No.Telepon/HP :</string>
    <string name="strSeminar">Seminar :</string>
    <string name="strSize">Ukuran Kaos :</string>
    
    <string name="strThanks">- Terimakasih Atas Partisipasinya -</string>

</resources>
