<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.aditya.utsapps.RegisterActivity" >
    
    <android.support.v7.widget.Toolbar
       	xmlns:android="http://schemas.android.com/apk/res/android"
       	xmlns:tools="http://schemas.android.com/tools"
       	xmlns:app="http://schemas.android.com/apk/res-auto"
       	android:id="@+id/apptoolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    
	    <TextView
			android:id="@+id/txtTitle"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="0dp"
		    android:layout_marginTop="15dp"
		    android:text="@string/title_activity_register"
		    android:textColor="#ffffff"
		    android:textSize="18dp"
		    android:gravity="center_horizontal"
		    android:textAlignment="center"
		    android:textStyle="bold" />
    
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp" >
        
        <RelativeLayout 
	    	android:id="@+id/tableLayout1"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent" >
	        
            <TextView
		        android:id="@+id/textView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="21dp"
		        android:layout_marginTop="39dp"
		        android:text="@string/strNama" />

		    <TextView
		        android:id="@+id/txtNama"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/textView1"
		        android:layout_alignBottom="@+id/textView1"
		        android:layout_marginLeft="76dp"
		        android:layout_toRightOf="@+id/textView1"
		        android:text="TextView" />
		    
		    <TextView
		        android:id="@+id/textView2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="21dp"
		        android:layout_marginTop="69dp"
		        android:text="@string/strAlamat" />
		
		    <TextView
		        android:id="@+id/txtAlamat"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/textView2"
		        android:layout_alignBottom="@+id/textView2"
		        android:layout_marginLeft="69dp"
		        android:layout_toRightOf="@+id/textView2"
		        android:text="TextView" />
		    
		    <TextView
		        android:id="@+id/textView3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="21dp"
		        android:layout_marginTop="99dp"
		        android:text="@string/strSex" />
		
		    <TextView
		        android:id="@+id/txtSex"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/textView3"
		        android:layout_alignBottom="@+id/textView3"
		        android:layout_marginLeft="27dp"
		        android:layout_toRightOf="@+id/textView3"
		        android:text="TextView" />
		    
		    <TextView
		        android:id="@+id/textView4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="21dp"
		        android:layout_marginTop="129dp"
		        android:text="@string/strDOB" />
		
		    <TextView
		        android:id="@+id/txtTglLahir"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/textView4"
		        android:layout_alignBottom="@+id/textView4"
		        android:layout_marginLeft="30dp"
		        android:layout_toRightOf="@+id/textView4"
		        android:text="TextView" />
		    
		    <TextView
		        android:id="@+id/textView5"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="21dp"
		        android:layout_marginTop="159dp"
		        android:text="@string/strTempatLahir" />
		
		    <TextView
		        android:id="@+id/txtTmptLahir"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/textView5"
		        android:layout_alignBottom="@+id/textView5"
		        android:layout_marginLeft="32dp"
		        android:layout_toRightOf="@+id/textView5"
		        android:text="TextView" />
		    
		    <TextView
		        android:id="@+id/textView6"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="21dp"
		        android:layout_marginTop="189dp"
		        android:text="@string/strKTP" />
		
		    <TextView
		        android:id="@+id/txtKTP"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/textView6"
		        android:layout_alignBottom="@+id/textView6"
		        android:layout_marginLeft="50dp"
		        android:layout_toRightOf="@+id/textView6"
		        android:text="TextView" />
		    
		    <TextView
		        android:id="@+id/textView7"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="21dp"
		        android:layout_marginTop="219dp"
		        android:text="@string/strEmail" />
		
		    <TextView
		        android:id="@+id/txtEmail"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/textView7"
		        android:layout_alignBottom="@+id/textView7"
		        android:layout_marginLeft="32dp"
		        android:layout_toRightOf="@+id/textView7"
		        android:text="TextView" />
		    
		    <TextView
		        android:id="@+id/textView8"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="21dp"
		        android:layout_marginTop="249dp"
		        android:text="@string/strHP" />
		
		    <TextView
		        android:id="@+id/txtNoTelp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/textView8"
		        android:layout_alignBottom="@+id/textView8"
		        android:layout_marginLeft="18dp"
		        android:layout_toRightOf="@+id/textView8"
		        android:text="TextView" />
		    
		    <TextView
		        android:id="@+id/textView9"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="22dp"
		        android:layout_marginTop="279dp"
		        android:text="@string/strSeminar" />
		
		    <TextView
		        android:id="@+id/txtSeminar"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/textView9"
		        android:layout_alignBottom="@+id/textView9"
		        android:layout_marginLeft="64dp"
		        android:layout_toRightOf="@+id/textView9"
		        android:text="TextView" />
		    
		    <TextView
		        android:id="@+id/textView10"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="21dp"
		        android:layout_marginTop="309dp"
		        android:text="@string/strSize" />
		
		    <TextView
		        android:id="@+id/txtUkuranKaos"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/textView10"
		        android:layout_alignBottom="@+id/textView10"
		        android:layout_marginLeft="37dp"
		        android:layout_toRightOf="@+id/textView10"
		        android:text="TextView" />

		    <TextView
		        android:id="@+id/textView11"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/textView10"
		        android:layout_alignParentBottom="true"
		        android:layout_marginTop="370dp"
		        android:layout_marginLeft="10dp"
		        android:text="@string/strThanks"
		        android:textAlignment="center"
		        android:textStyle="italic"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
        </RelativeLayout>
        
    </ScrollView>

</RelativeLayout>
